# keeper

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  biome.json  bunfig.toml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.keeper/: CLAUDE.md
agent-templates/: practice-scout.md.tmpl  worker-codex.md.tmpl  worker.md.tmpl
agents/: classifier.md  close-planner.md  docs-gap-scout.md  epic-scout.md  gap-analyst.md  quality-auditor.md  repo-scout.md
babysitters/: FINDINGS-LEDGER.md
cli/: accounts.ts  agent.ts  autopilot.ts  await.ts  baseline.ts  board.ts  builds.ts  bus.ts  commit-work.ts  control-rpc.ts  conversation.ts  daemon.ts  dash.ts  dead-letter.ts  descriptor.ts  dispatch.ts  duration.ts  envelope.ts  escalation-brief.ts  find-file-history.ts  find-task-commit.ts  format.ts  frames.ts  git.ts  handoff.ts  history.ts  incident.ts  jobs.ts  keeper-watch.ts  keeper-watchdog.ts  keeper.ts  note.ts  pair.ts  plan.ts  plugin.ts  projects.ts  prompt.ts  query.ts  reclaim.ts  repo.ts  (+19 more)
commands/: babysit-init.md  babysit-triage.md
docs/: agent-surface-contracts.md  exec-backend.md  install.md  pill-inventory.md  plan-name-retirement.md  planctl-strip.md  plugin-composition-map.md  problem-codes.md  skill-authoring.md  testing.md
hooks/: hooks.json
keeper/: __init__.py  api.py
planctl/: __main__.py  _util.py  acks.py  api.py  audit_artifacts.py  brief.py  bundle_ref.py  cli.py  codex_review.py  commit.py  commit_lookup.py  commit_messages.py  config.py  deps.py  discovery.py  global_state.py  ids.py  integrity.py  invocation.py  models.py  output.py  project.py  reaper.py  repo_inference.py  run_approve.py  run_audit_submit.py  run_block.py  run_cat.py  run_claim.py  run_close_finalize.py  run_close_preflight.py  run_codex_epic_review.py  run_codex_plan_review.py  run_codex_work_review.py  run_detect.py  run_done.py  run_epic_ack.py  run_epic_add_dep.py  run_epic_add_deps.py  run_epic_close.py  (+52 more)
plist/: arthack.babysitter.builds.watch.plist  arthack.babysitter.builds.watchdog.plist  arthack.babysitter.helptailing.watch.plist  arthack.babysitter.performance.watch.plist  arthack.babysitter.performance.watchdog.plist  arthack.keeper-babysit.plist  arthack.keeper-watch.plist  arthack.keeper-watchdog.plist  arthack.keeperd.logrotate.plist  arthack.keeperd.plist
plugin/zellij-bridge/: Cargo.toml  VERSION  keeper-zellij-bridge.wasm
plugin/zellij-bridge/src/: lib.rs  main.rs
scripts/: approve.ts  archive-recovered-dead-letters.ts  assert-comment-only.ts  audit-session-activity.ts  autopilot.ts  backstop-stats.ts  backup-db.ts  bench-latency.ts  board.ts  build-plugin.sh  classify_worker_dropoffs.py  clean-machine-check.ts  commands.ts  conflict-classification-report.ts  daemon-fingerprint.ts  daemon-load-roots.txt  docs-migrate.ts  drain-dead-letters.ts  emit-schema-fixture.ts  ensure-plugin-config.ts  epics.ts  frozen-allowlist.txt  gen-plan-classifier-fixture.py  generate-subagent-invocation-fixtures.py  git-worker-cpu-soak.ts  git.ts  install-completions.ts  install-pi-plan-agents.ts  install.sh  jobs.ts  keeper-frames.ts  keeper-subscribe.ts  lint-claude-md.ts  lint-fast-tests.ts  lint-no-real-git.ts  lint-retired-name.sh  lint-retired-name.ts  lint-skill-ids.ts  lint-source-allowlist.json  lint-source.ts  (+31 more)
skill-templates/: queue-defer.md.tmpl  work.md.tmpl
src/: account-focus.ts  account-observation-refresh.ts  account-observation.ts  account-observer-worker.ts  account-recovery.ts  account-router.ts  account-routing-config.ts  ansi-to-styled.ts  armed-closure.ts  audit_artifacts.ts  autoclose-worker.ts  autopilot-projection.ts  autopilot-worker.ts  await-conditions.ts  await-worker.ts  backend-worker.ts  backfill-mutation-path.ts  backstop-telemetry.ts  backup.ts  baseline-store.ts  baseline-worker.ts  birth-ingest-worker.ts  birth-record.ts  board-render.ts  builds-worker.ts  bus-artifact.ts  bus-db.ts  bus-identity.ts  bus-wake.ts  bus-worker.ts  claude-tier.ts  cli.ts  clipboard-debug.ts  clipboard.ts  codex-account-observation-refresh.ts  codex-account-observation.ts  codex-account-observer-worker.ts  codex-account-router.ts  codex-pool-activation.ts  codex-pool-proof-window.ts  (+148 more)
test/: account-focus.test.ts  account-observation-refresh.test.ts  account-observation.test.ts  account-observer-worker.test.ts  account-recovery.test.ts  account-router.test.ts  agent-account-routing.test.ts  agent-args.test.ts  agent-byte-pin.test.ts  agent-codex-session-index.test.ts  agent-codex.test.ts  agent-config.test.ts  agent-cwd-confirm.test.ts  agent-cwd-ordinal.test.ts  agent-dispatch.test.ts  agent-harness.test.ts  agent-hermes.test.ts  agent-launch-config.test.ts  agent-launch-handle-depgraph.test.ts  agent-launch-handle.test.ts  agent-matrix.test.ts  agent-metadata-inference.test.ts  agent-modal-host.slow.test.ts  agent-modal-host.test.ts  agent-modal-overlay.slow.test.ts  agent-modal-overlay.test.ts  agent-no-confirm.test.ts  agent-pair-subcommands.test.ts  agent-panel-cli.test.ts  agent-passthrough.test.ts  agent-phaser.test.ts  agent-pi-prompt-artifacts.test.ts  agent-pi.test.ts  agent-plan-role-names.test.ts  agent-plugins.test.ts  agent-presets.test.ts  agent-profile-bootstrap.test.ts  agent-resume-policy.test.ts  agent-run-capture-depgraph.test.ts  agent-run-capture-golden.test.ts  (+357 more)
tests/: conftest.py  test_acks_module.py  test_api.py  test_audit_artifacts.py  test_audit_submit.py  test_claim.py  test_classifier_schema.py  test_cli.py  test_cli_invoker_guard.py  test_close_finalize.py  test_close_preflight.py  test_close_skill.py  test_close_skill_consistency.py  test_close_skill_wire_format.py  test_codex_epic_review.py  test_codex_review.py  test_codex_work_review.py  test_commit.py  test_commit_guard_hook.py  test_creation_verbs.py  test_cross_project_epic_deps.py  test_cross_project_sketch_inline.py  test_defer_skill_consistency.py  test_emit.py  test_envelope.py  test_envelope_shape.py  test_epic_ack.py  test_epic_add_dep.py  test_epic_add_deps.py  test_epic_close.py  test_epic_files_no_audited_into_field.py  test_epic_files_no_draft_field.py  (+53 more)
(+7844 files in other folders)
