[project]
name = "planctl"
version = "0.0.0"
description = "Manage epics, tasks, and specs in structured project workflows"
requires-python = ">=3.11,<3.14"
dependencies = ["click>=8.1,<8.2", "jsonschema>=4.21,<5", "pyyaml"]

[project.scripts]
planctl = "planctl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["planctl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# fn-638: -n auto parallelises across CPU cores (881 tests, ~3x speedup);
# --timeout=30 lifts the prior 3s wall that was sub-budget for tests doing
# real `scaffold` work (git init + `promptctl inline-sketch-refs` subprocess
# + multiple commit subprocesses under flock). 30s still catches genuine
# hangs without flagging routine subprocess-heavy paths under xdist load.
# --strict-markers turns a typo'd or unregistered @pytest.mark into a
# collection error, so every marker must be registered (see
# tests/conftest.py::pytest_configure) — guards the `real_git` / `integration`
# split against silent no-op misspellings.
addopts = "--import-mode=importlib --timeout=30 -n auto --strict-markers"
testpaths = ["tests"]

[tool.ty.src]
exclude = [
    "**/tests/**",
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# Mirrors arthack's suppression set (apps/planctl was checked under that
# config). Each rule below is a documented false-positive surface ty cannot
# narrow; the underlying invariant is validated in code. Errors at their
# default severity (invalid-return-type, no-matching-overload,
# call-non-callable) stay fatal so the commit-work gate catches real bugs.
possibly-unresolved-reference = "ignore"
invalid-assignment = "ignore"
not-subscriptable = "ignore"
unresolved-attribute = "ignore"
invalid-await = "ignore"
unsupported-operator = "ignore"
invalid-argument-type = "ignore"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
