[package]
name = "keeper-zellij-bridge"
version = "0.1.0"
edition = "2021"
description = "Headless zellij plugin that pushes PaneUpdate/TabUpdate deltas as NDJSON for keeper to fold"
license = "MIT"
publish = false

# zellij plugins are WASI *command* modules: zellij 0.44.x looks up the
# `_start` export (plugin_loader.rs `get_typed_func::<(), ()>("_start")`) and
# fails the whole load with "could not find exported function" if it's
# missing. `register_plugin!` injects a `fn main`, which only becomes the
# `_start` entry point when this crate is built as a BINARY — a `cdylib`
# produces a reactor with no entry point and the plugin never instantiates
# (load() never runs, no NDJSON feed, tab-namer goes dark). The official
# rust-plugin-example (src/main.rs, no [lib]) and zjstatus ([[bin]]) both
# build as binaries; we do the same — `src/main.rs`, no crate-type override.
[[bin]]
name = "keeper-zellij-bridge"
path = "src/main.rs"

[dependencies]
# Exact pin to the installed zellij (0.44.3). Re-pin on zellij upgrade — a
# version-skew test (task .4) enforces this matches `zellij --version`.
zellij-tile = "=0.44.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
